RESOLVED FIXED87753
[GTK] Policy decision headers are not included in the main webkit2.h header
https://bugs.webkit.org/show_bug.cgi?id=87753
Summary [GTK] Policy decision headers are not included in the main webkit2.h header
Carlos Garcia Campos
Reported 2012-05-29 09:35:51 PDT
ssia
Attachments
Patch (1.42 KB, patch)
2012-05-29 09:38 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2012-05-29 09:38:32 PDT
Carlos Garcia Campos
Comment 2 2012-05-29 09:44:50 PDT
Note You need to log in before you can comment on or make changes to this bug.