[GTK] Policy decision headers are not included in the main webkit2.h header https://bugs.webkit.org/show_bug.cgi?id=87753

Reviewed by Martin Robinson.

* UIProcess/API/gtk/webkit2.h: Include
WebKitNavigationPolicyDecision.h and WebKitResponsePolicyDecision.h.

git-svn-id: svn://svn.chromium.org/blink/trunk@118794 bbb929c8-8fbe-4397-9dbb-9b2b20218538